--- a/home.html
+++ b/home.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Página HOME</h1>
     <p>Criando página home do meu site</p>
+    <p>O projeto está pronto, praticamente</p>
 </body>
 </html>
